--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ requires-python = ">=3.13"
 dependencies = [
     "pyaudiowpatch (>=0.2.12.7,<0.3.0.0)",
     "numpy (>=2.3.5,<3.0.0)",
-    "sounddevice (>=0.5.3,<0.6.0)"
+    "sounddevice (>=0.5.3,<0.6.0)",
+    "pyqt6 (==6.10.0)",
+    "pyqtgraph (>=0.14.0,<0.15.0)"
 ]
 
 
