--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,14 @@ authors = [
 ]
 license = {text = "MIT"}
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.13,<3.14"
 dependencies = [
     "pyaudiowpatch (>=0.2.12.7,<0.3.0.0)",
     "numpy (>=2.3.5,<3.0.0)",
     "sounddevice (>=0.5.3,<0.6.0)",
     "pyqt6 (==6.10.0)",
-    "pyqtgraph (>=0.14.0,<0.15.0)"
+    "pyqtgraph (>=0.14.0,<0.15.0)",
 ]
-
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
@@ -23,3 +22,9 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 package-mode = false
+
+
+[dependency-groups]
+dev = [
+    "pyinstaller (>=6.17.0,<7.0.0)"
+]
