--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "sounddevice (>=0.5.3,<0.6.0)",
     "pyqt6 (==6.10.0)",
     "pyqtgraph (>=0.14.0,<0.15.0)",
+    "textual (>=6.6.0,<7.0.0)",
+    "textual-plotext (>=1.0.1,<2.0.0)",
 ]
 
 [build-system]
